<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#FFFFFF">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:gravity="center"/>
    
    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/happening_now"
        android:layout_gravity="center" 
        android:textSize="20sp"
        android:id="@+id/happening_now"/>
    
    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/near_you"
        android:layout_gravity="center" 
        android:textSize="20sp"
        android:id="@+id/near_you"/>
    
    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/all_events"
        android:layout_gravity="center" 
        android:textSize="20sp"
        android:id="@+id/all_events"/>
    
    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/add_event"
        android:layout_gravity="center" 
        android:textSize="20sp"
        android:id="@+id/add_event"/>
</LinearLayout>